# API_for_posts_and_coments

./: README.md  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 02f7ac0ce877_new_schemas.py  1fe9eaad0b06_newsh.py  48d872fe5124_news.py  ca4ad9cf8d3b_init.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/database/: db.py  models.py
src/repository/: comments.py  posts.py  users.py
src/routes/: auth.py  comments.py  posts.py  users.py
src/schemas/: schemas.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html  reset_template.html
tests/: conftest.py  test_route_auth.py  test_route_comments.py  test_route_posts.py  test_unit_repositiry_users.py  test_unit_repository_comments.py  test_unit_repository_posts.py
